# binary-window-function-prototype

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
archive/: window_function_operator.cpp  window_function_operator.h
data/: UC1_input.csv  UC1_probe.csv  UC1_result.csv  dynamic_columns.csv  dynamic_columns_output.csv  output_with_ma.csv  sensor.csv  sensor_w_partitions.csv  sensor_w_partitions_output.csv
data/first_test/: input3.csv  output3.csv  probe3.csv
data/framing_test/: input1.csv  input3.csv  input4.csv  input5.csv  input6.csv  input7.csv  output1.csv  output2.csv  output4.csv  output5.csv  output6.csv  probe3.csv  probe4.csv  probe7.csv
include/: data_io.h  data_processing.h
include/aggregators/: aggregator.h  avg_aggregator.h  count_aggregator.h  factory.h  max_aggregator.h  min_aggregator.h  sum_aggregator.h
include/core/: types.h
include/operators/: binary_window_function_operator.h  binary_window_function_operator2.h  binary_window_operator.h  window_function_operator.h
include/operators/utils/: frame_utils.h  join_utils.h  join_utils2.h  partition_utils.h  partition_utils2.h  sort_utils.h  sort_utils2.h  thread_pool.h  timing_utils.h
src/: benchmark_bwf.cpp  binary_creator.cpp  binary_data_processing.cpp  data_io.cpp  data_processing.cpp  partitioning_tester.cpp  sorting_tester.cpp
src/aggregators/: avg_aggregator.cpp  count_aggregator.cpp  factory.cpp  max_aggregator.cpp  min_aggregator.cpp  sum_aggregator.cpp
src/operators/: binary_window_function_operator.cpp  binary_window_function_operator2.cpp  binary_window_operator.cpp  window_function_operator.cpp
src/operators/utils/: frame_utils.cpp  join_utils.cpp  join_utils2.cpp  partition_utils.cpp  partition_utils2.cpp  sort_utils.cpp  sort_utils2.cpp  thread_pool.cpp
